@@ -8,7 +8,7 @@ if(NOT RET EQUAL 0)
 	message(FATAL_ERROR "libcss gen_parser build failed (error ${RET})")
 endif()
 
-execute_process(COMMAND mkdir -pv ${CMAKE_BINARY_DIR}/contrib/libcss/properties RESULT_VARIABLE RET)
+execute_process(COMMAND mkdir -p ${CMAKE_BINARY_DIR}/contrib/libcss/properties RESULT_VARIABLE RET)
 if(NOT RET EQUAL 0)
 	message(FATAL_ERROR "Unable to create directory: ${CMAKE_BINARY_DIR}/contrib/libcss/properties (error ${RET})")
 endif()
@@ -17,7 +17,7 @@ if(NOT RET EQUAL 0)
 	message(FATAL_ERROR "libcss parser_wrapper.sh failed (error ${RET})")
 endif()
 
-execute_process(COMMAND python3 ${CMAKE_SOURCE_DIR}/contrib/libcss/src/select/select_generator.py RESULT_VARIABLE RET)
+execute_process(COMMAND python3 ${CMAKE_SOURCE_DIR}/contrib/libcss/src/select/select_generator.py ${CMAKE_BINARY_DIR} RESULT_VARIABLE RET)
 if(NOT RET EQUAL 0)
 	message(FATAL_ERROR "libcss select_generator.py failed (error ${RET})")
 endif()
