@@ -1,20 +1,14 @@
 #!/usr/bin/env zsh
-##!/usr/bin/env bash
-#TODO: ensure posix shell compliance
 
-if [[ $# -lt 3 ]]; then
+if [[ ${#} -lt 3 ]]; then
 	echo "Requires at least three arguments (output directory, gen_parser binary location, properties.gen location)"
 	exit 1
 fi
 
 while read PROP; do
-	if [[ ! "$PROP" =~ '#' ]] && [[ $(expr length "$PROP") -ne 0 ]]; then
-		#IFS=':'
-		#P=($PROP)
-		#"$2" -o "$1/autogenerated_$P.c" "$PROP"
-  		# Temporary workaround for zsh
+	if [[ ! "${PROP}" =~ '#' ]] && [[ ${#PROP} -ne 0 ]]; then
     		 P=(${(s/:/)PROP})
-      		 "$2" -o "$1/autogenerated_${P[1]}.c" "$PROP"
+      		 "${2}" -o "${1}/autogenerated_${P[1]}.c" "${PROP}"
 	fi
-done < "$3"
+done < "${3}"
 
