@@ -8,6 +8,7 @@
 import math
 import string
 import os
+import sys
 from select_config import values, groups
 from assets import assets
 from overrides import overrides
@@ -819,7 +820,7 @@ class CSSGroup:
             raise ValueError()
 
 css_groups = [ CSSGroup(g) for g in groups ]
-dir_path = os.getcwd() + "/contrib/libcss"
+dir_path = sys.argv[1] + "/contrib/libcss"
 
 for k, v in assets.items():
     # Key is filename string (e.g. "computed.h") without autogenerated_ prefix
